[tool.poetry]
name = "rsaalgorithm"
version = "0.1.0"
description = ""
authors = ["jonthus <joona.erkkila1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "^4.0"
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.11.1"
autopep8 = "^1.6.0"
coverage = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
